# Apollo-GUI.github.io

./: components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml
components/: draggable-element.tsx  editor.tsx  end-node-details.tsx  flow-view.tsx  function-node-details.tsx  icons.tsx  info-button.tsx  nav-rail.tsx  save-button.tsx  settings-menu.tsx  start-node-details.tsx  workflow-actions.tsx
components/nodes/: end-node.tsx  function-node.tsx  if-node.tsx  parallel-node.tsx  start-node.tsx
components/ui/: scroll-area.tsx  separator.tsx  sheet.tsx  toggle.tsx
example-wfs/: simple_if.json  simple_if_no_else.json  single_atomic.json
example-wfs/complex/: bwa.json  image_convolution.json  sentiment-analysis.json
example-wfs/demos/: atomic_element_index.json  data_transfer.json  par_for_complex.json  par_seq_dataflow.json  simple_block.json  simple_if.json  simple_if_no_else.json  simple_par_for.json  simple_split.json  simple_while.json  simple_while_new.json  single_atomic.json  six_atomics.json  while_coll.json  while_in_while.json
lib/: node-helpers.ts  utils.ts
src/: App.tsx  app.tsx  home.tsx  types.ts
src/components/: base-details-sheet.tsx  conditions-section.tsx  data-in-section.tsx  data-out-section.tsx  delete-node-button.tsx  draggable-element.tsx  editor.tsx  end-node-details.tsx  flow-view.tsx  format-button.tsx  function-node-details.tsx  function-properties-constraints.tsx  icons.tsx  if-data-out-section.tsx  (+13 more)
wf-exporter/: Cargo.toml
wf-exporter/src/: exporter.rs  lib.rs
(+9 files in other folders)
